Minor layout bugfixes.

--- a/styles/components/breadcrumbs.sass
+++ b/styles/components/breadcrumbs.sass
@@ -4,12 +4,16 @@
     line-height: 16px
     margin-bottom: 27px
     cursor: default
+    padding-right: 100px
+    position: relative
 
     a:hover
         color: $color-text
 
     .back-button
-        float: right
+        position: absolute
+        right: 0
+        top: 0
         cursor: pointer
         &:hover
             color: $color-text
