--- a/styles/form/field.sass
+++ b/styles/form/field.sass
@@ -23,7 +23,7 @@
         &.disabled
             span
                 cursor: default
-                background: linear-gradient(0, transparent 25%, #ffffff 50%, transparent 57%)
+                background: linear-gradient(0, rgba(245,248,250,0) 25%, #fff 50%, rgba(255,255,255,0) 57%)
                 border-radius: 25px
         span
             cursor: pointer
